--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,21 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
+  @keyframes shimmer {
+    0% {
+      transform: translateX(-100%);
+    }
+
+    100% {
+      transform: translateX(100%);
+    }
+  }
+
+  .shimmer-effect {
+    animation: shimmer 2s infinite;
+  }
+
   .dark {
     --background: 224 71.4% 4.1%;
     --foreground: 210 20% 98%;
@@ -72,6 +87,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
